# A-SYNC

./: .gitignore  COMPREHENSIVE_REVIEW.md  Cargo.toml  FIXES_APPLIED.txt  FIXES_ROADMAP.md  FIXES_SUMMARY.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MSSCS_COMPARISON.md  NODE_SYNC_STATUS_FIX.md  P2P_FIXES_COMPLETE.md  P2P_INITIALIZATION_FIXED.md  P2P_INITIALIZATION_TIMEOUT_FIX.md  PEER_MATCHING_REVIEW.md  QUICK_FIXES.md  QUICK_FIX_REFERENCE.md  QUICK_REFERENCE_WEB.md  QUICK_START.txt  QUICK_START_FIXES.md  QUICK_START_WEB_VUE.md  QUICK_START_WORKSPACES.md  README_IMPLEMENTATION.md  README_WEB_VERSION.md  README_WEB_VUE.md  REVIEW_README.md  SECURITY_AUDIT.md  START_HERE.md  SYNC_STATUS_AND_CONNECTIVITY_FIXES.md  SYNC_STATUS_FIX_SUMMARY.md  SYSTEM_SUMMARY.md  TAURI_IMPROVEMENTS.md  WEB_ARCHITECTURE_DIAGRAM.md  WEB_STATUS_FIX_SUMMARY.md  WEB_VERSION_COMPLETE.md  WEB_VUE_MIGRATION_GUIDE.md  WORKSPACE_ARCHITECTURE_DIAGRAM.md  WORKSPACE_COLLABORATION.md  WORKSPACE_IMPLEMENTATION_SUMMARY.md  package.json  (+7 more)
IMPROVED_FILES/: filesStore.ts  validation.rs
msscs_client/: .gitignore  BUILD_FIX.md  DESIGN_PREVIEW.md  DESIGN_SYSTEM.md  FEATURES.md  MODERNIZATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_DESIGN.md  index.html  package.json  pnpm-lock.yaml  setup.ps1
msscs_client/scripts/: build.sh
msscs_client/src/: App.vue  connection-monitor.ts  main.ts  peerjs-bridge.ts
msscs_client/src-tauri/: Cargo.toml  tauri.conf.json
msscs_client/src-tauri/scripts/: setup-linux.sh  setup-windows.bat
msscs_client/src-tauri/src/: firewall.rs  main.rs
msscs_mobile/: .gitignore  ALTERNATIVE_APPROACH.md  BUILD_GUIDE.md  FEATURES.md  MANUAL_V2_UPDATE.md  MOBILE_COMPLETE.md  QUICKSTART.md  README.md  RUN_THIS.md  TAURI_V2_ANDROID_FIXED.md  TAURI_V2_MIGRATION.md  build-android-v2.ps1  build-apk.ps1  index.html  migrate-to-v2.ps1  package.json  pnpm-lock.yaml  setup-and-build.ps1  setup-capacitor.ps1
msscs_mobile/src/: App.vue  main.ts
msscs_mobile/src-tauri/: Cargo.toml  tauri.conf.json
msscs_mobile/src-tauri/icons/: generate-icons.ps1
msscs_mobile/src-tauri/src/: file_viewer.rs  lib.rs  main.rs  network_discovery.rs  p2p_bridge.rs
msscs_v4/: Cargo.toml  README.md  config.example.toml  config.toml.example  relay-server-example.rs
msscs_v4/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md
msscs_v4/examples/: advanced_p2p_demo.rs  benchmark_p2p.rs  demo.ps1  full_p2p_test.rs  full_system_demo.rs  p2p_demo.ps1  p2p_demo.rs  performance_benchmark.rs  quantum_demo.ps1  simple_p2p_test.rs  test_p2p_network.ps1
msscs_v4/msscs-client/: package.json
msscs_v4/msscs-client/src-tauri/: Cargo.toml  tauri.conf.json
msscs_v4/msscs-client/src-tauri/src/: main.rs
msscs_v4/scripts/: start_p2p_network.ps1
msscs_v4/src/: access_control.rs  adaptive_compression.rs  api.rs  block.rs  config.rs  content_addressing.rs  erasure.rs  error.rs  gateway.rs  geo.rs  huffman.rs  identity.rs  lib.rs  main.rs  metrics.rs  network.rs  p2p_api.rs  p2p_network.rs  p2p_storage.rs  p2p_vfs.rs  parallel.rs  persistence.rs  pinning.rs  proof_of_storage.rs  quantum_block.rs  quantum_crypto.rs  quantum_crypto_example.rs  relay.rs  singularity.rs  streaming.rs  superposition_kdf.rs  timelock.rs  unlocked_identity.rs  vfs.rs  webrtc_bridge.rs  workspace.rs
msscs_v4/tests/: block_pipeline_test.rs  compression_encryption_test.rs  config_test.rs  huffman_test.rs  integration_test.rs  quantum_crypto_test.rs
msscs_web/: .env.example  DEPLOYMENT.md  DISCOVERY_DEPLOYMENT.md  FEATURES.md  INDEX.md  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  VISUAL_GUIDE.md  app.js  connection-monitor.js  crypto.js  deploy-discovery.ps1  deploy-discovery.sh  discovery-server.js  erasure-coding.js  index-vue.html  index.html  p2p.js  package.json  peerjs-server.js  pnpm-lock.yaml  quantum-crypto.js  server.js  start-all.js  start-vue-web.ps1  start-vue-web.sh  start-web.ps1  start-web.sh  start.ps1  start.sh  storage.js  styles.css  vite.config.js  webrtc-bridge.js
msscs_web/public/: index.html
msscs_web/src/: App.vue  main.js  tauri-adapter.js
scripts/: build-all.js  build-web.js  build.js
(+52 files in other folders)
