[package]
name = "msscs_v4"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
toml = "0.8"
async-trait = "0.1"

# Advanced P2P networking (libp2p) with full NAT traversal support
libp2p = { version = "0.53", features = [
    "kad",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "request-response",
    "tokio",
    "macros",
    "dns",
    "quic",           # QUIC transport for better NAT traversal
    "relay",          # Circuit relay for NAT traversal
    "dcutr",          # Direct Connection Upgrade through Relay (hole-punching)
    "autonat",        # Automatic NAT detection
    "identify",       # Peer identification
] }
futures = "0.3"

# Quantum-resistant cryptography
pqc_kyber = "0.7"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand_core = "0.6"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.8"
